added handler for recurring tasks templates
